--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://tdclflxovwhqutaikvuj.supabase.co; img-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://upload.wikimedia.org data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
     <title>Lappen.no - Teoriprøve Klasse B</title>
     <meta name="description" content="Øv på teoriprøven for førerkort klasse B (personbil)" />
   </head>
